--- a/openshift/service.yaml
+++ b/openshift/service.yaml
@@ -3,6 +3,12 @@ kind: Service
 metadata:
   labels:
     app: todo-python
+    discovery.3scale.net: 'true'
+  annotations:
+    discovery.3scale.net/scheme: 'http'
+    discovery.3scale.net/port: '8080'
+    discovery.3scale.net/path: '/'
+    discovery.3scale.net/description-path: '/openapi.json'
   name: todo-python
   namespace: todo
 spec:
