--- a/openshift/deployment.yaml
+++ b/openshift/deployment.yaml
@@ -32,11 +32,11 @@ spec:
         name: todo-python
         resources:
           requests:
-            memory: "128Mi"
-            cpu: "500m"
+            memory: '128Mi'
+            cpu: '500m'
           limits:
-            memory: "512Mi"
-            cpu: "3000m"
+            memory: '512Mi'
+            cpu: '3000m'
         ports:
         - name: the-port
           containerPort: 8080
