--- a/openshift/service.yaml
+++ b/openshift/service.yaml
@@ -9,7 +9,7 @@ metadata:
     discovery.3scale.net/port: '8080'
     discovery.3scale.net/path: '/'
     discovery.3scale.net/description-path: '/openapi.json'
-  name: todo-python
+  name: todo-python-service
   namespace: todo
 spec:
   ports:
